--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,5 +27,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"/>
 
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
 </manifest>
