--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
         jniLibs.srcDir 'src/main/libs'
 
     }
+    sourceSets { main { res.srcDirs = ['src/main/res', 'src/main/res/values-b+es'] } }
 }
 
 dependencies {
@@ -36,9 +37,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile project(':viewlibrary')
+
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
     compile 'com.android.support:support-v4:25.2.0'
-
     testCompile 'junit:junit:4.12'
 }
