--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ProjectActivity"
-            android:configChanges="orientation|screenSize"
+            android:configChanges="locale|orientation|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:noHistory="true"
