--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,15 +25,13 @@
             android:configChanges="locale|orientation|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:noHistory="true"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.DEFAULT" />
                 <action android:name="android.intent.action.HOME" />
             </intent-filter>
         </activity>
-        <activity android:name=".Views.StartedApp.ProjectStartActivity"
-                  android:noHistory="true">
+        <activity android:name=".Views.StartedApp.ProjectStartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
