--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,8 @@ android {
         debug {
             debuggable true
             minifyEnabled false
+            shrinkResources false
+            testCoverageEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt')
         }
     }
